--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "luxon": "^2.1.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.16.1",
     "vue-head": "^2.2.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
